--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,3 +26,23 @@ h1 {
   font-size: 60px;
   font-weight: 400;
 }
+
+h2 {
+  color: #000;
+  width: 519px;
+  text-align: center;
+  font-family: "DM Serif Display";
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px; /* 118.182% */
+}
+
+.soutext p {
+  color: #000;
+  width: 519px;
+  text-align: center;
+  font-family: Heebo;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 20px;
+}
