--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,12 +37,30 @@ h2 {
   line-height: 26px; /* 118.182% */
 }
 
-.soutext p {
+h3 {
   color: #000;
-  width: 519px;
+  width: 235px;
+  text-align: center;
+  font-family: Heebo;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px; /* 127.778% */
+}
+
+p {
+  color: #000;
   text-align: center;
   font-family: Heebo;
   font-size: 10px;
+  width: 235px;
+  font-weight: 500;
+  line-height: 20px; /* 200% */
+}
+.clair p {
+  color: #b3b3b3;
+  font-family: Heebo;
+  font-size: 10px;
+  width: 235px;
   font-weight: 500;
   line-height: 20px;
 }
