--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@ h3 {
 }
 
 p {
+  width: 312px;
   color: #000;
   text-align: center;
   font-family: Heebo;
@@ -63,4 +64,7 @@ p {
   width: 235px;
   font-weight: 500;
   line-height: 20px;
+}
+.article1 .article1 {
+  text-align: center;
 }
